--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Image resizing proxy",
   "main": "src/index.ts",
+  "engines": {
+    "node": ">= 12.0.0"
+  },
   "scripts": {
     "start": "node ./build/index.js",
     "debug": "nodemon",
@@ -34,16 +37,16 @@
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.1",
     "@types/minio": "^7.0.5",
-    "@types/node": "^13.11.1",
+    "@types/node": "^13.13.0",
     "@types/sharp": "^0.24.0",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-promise": "^4.2.1",
     "jest": "^25.3.0",
     "nodemon": "^2.0.3",
-    "ts-jest": "^25.3.1",
+    "ts-jest": "^25.4.0",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   },
