--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Test
+name: CI
 
 on:
   push:
@@ -6,7 +6,8 @@ on:
     types: [opened, synchronize, reopened, ready_for_review]
 
 jobs:
-  build:
+  ci:
+    name: CI
 
     runs-on: ubuntu-latest
 
