--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -19,6 +19,8 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: nonsensebb/pulitzer
           tag_with_ref: true
+          tags:
+            - latest
 
   push_to_registry:
     name: Push Docker image to GitHub Packages
@@ -35,4 +37,6 @@ jobs:
           registry: docker.pkg.github.com
           repository: d3x7r0/pulitzer/pulitzer
           tag_with_ref: true
+          tags:
+            - latest
 
