--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "minio": "^7.0.15",
+    "opossum": "^5.0.0",
     "sharp": "^0.25.2"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@types/jest": "^25.2.1",
     "@types/minio": "^7.0.5",
     "@types/node": "^13.13.0",
+    "@types/opossum": "^4.1.0",
     "@types/sharp": "^0.24.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
