Added environment variable to disable circuit breaker

--- a/.env.default
+++ b/.env.default
@@ -10,6 +10,7 @@ S3_SECRET_KEY=YOUR-SECRETACCESSKEY
 
 #STORE_IMAGES=true
 
+#CIRCUIT_BREAKER_ENABLED=false
 #CIRCUIT_BREAKER_TIMEOUT=5000
 #CIRCUIT_BREAKER_ERROR_PERCENTAGE_THRESHOLD=30
 #CIRCUIT_BREAKER_RESET_TIMEOUT=3000
