--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - releases/**
+      - dependabot/**
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
 
