--- a/.env.default
+++ b/.env.default
@@ -4,6 +4,8 @@ S3_REGION=eu-west-1
 S3_ACCESS_KEY=YOUR-ACCESSKEYID
 S3_SECRET_KEY=YOUR-SECRETACCESSKEY
 
+#S3_ALLOWED_BUCKETS=my-bucket,my-other-bucket
+
 #HTTP_MAX_AGE=31536000
 #HTTP_PORT=8080
 #HTTP_PATH_SEPARATOR=__processed
