Enabled AVIF support

--- a/.env.default
+++ b/.env.default
@@ -16,3 +16,5 @@ S3_SECRET_KEY=YOUR-SECRETACCESSKEY
 #CIRCUIT_BREAKER_TIMEOUT=5000
 #CIRCUIT_BREAKER_ERROR_PERCENTAGE_THRESHOLD=30
 #CIRCUIT_BREAKER_RESET_TIMEOUT=3000
+
+#ENABLE_AVIF_SUPPORT=false
