--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,9 +12,7 @@ on:
 jobs:
   ci:
     name: CI
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
 
@@ -48,3 +46,40 @@ jobs:
         run: npm test
         env:
           CI: true
+
+  push_to_docker_hub:
+    needs: ci
+    if: github.ref == 'refs/heads/master'
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: nonsensebb/pulitzer
+          tag_with_ref: false
+          tags: unstable
+
+  push_to_registry:
+    needs: ci
+    if: github.ref == 'refs/heads/master'
+    name: Push Docker image to GitHub Packages
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+
+      - name: Push to GitHub Packages
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: docker.pkg.github.com
+          repository: d3x7r0/pulitzer/pulitzer
+          tag_with_ref: false
+          tags: unstable
