--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,7 +66,7 @@ jobs:
           tags: unstable
 
   push_to_registry:
-    needs: ci
+    needs: tests
     if: github.ref == 'refs/heads/master'
     name: Push Docker image to GitHub Packages
     runs-on: ubuntu-latest
