Use pino for structured logging

--- a/.env.default
+++ b/.env.default
@@ -11,6 +11,7 @@ S3_SECRET_KEY=YOUR-SECRETACCESSKEY
 #HTTP_PATH_SEPARATOR=__processed
 
 #STORE_IMAGES=true
+#LOG_LEVEL=debug
 
 #CIRCUIT_BREAKER_ENABLED=false
 #CIRCUIT_BREAKER_TIMEOUT=5000
