--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node ./build/index.js",
-    "debug": "nodemon",
+    "debug": "NODE_ENV=development nodemon",
     "build": "tsc",
     "clean": "rm -rf build",
     "validate": "npm run validate:types && npm run lint && npm run test",
@@ -34,7 +34,9 @@
     "express": "^4.17.1",
     "minio": "^7.0.18",
     "opossum": "^6.0.0",
-    "sharp": "^0.28.0"
+    "pino-http": "^5.5.0",
+    "sharp": "^0.28.0",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
     "@nonsensebb/eslint-config-typescript": "^0.4.0",
@@ -43,6 +45,8 @@
     "@types/minio": "^7.0.7",
     "@types/node": "^14.14.37",
     "@types/opossum": "^4.1.1",
+    "@types/pino": "^6.3.6",
+    "@types/pino-http": "^5.4.0",
     "@types/sharp": "^0.27.3",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
@@ -51,6 +55,8 @@
     "eslint-plugin-promise": "^4.3.1",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "pino": "^6.11.2",
+    "pino-pretty": "^4.7.1",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
