--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "pulitzer",
-  "version": "0.7.3",
+  "version": "0.8.0-alpha",
   "description": "Image resizing proxy",
   "main": "src/index.ts",
   "engines": {
-    "node": ">= 12.0.0"
+    "node": ">= 18.0.0"
   },
   "scripts": {
     "start": "node ./build/index.js",
-    "debug": "NODE_ENV=development nodemon",
+    "debug": "NODE_ENV=development nodemon | pino-pretty",
     "build": "tsc",
     "clean": "rm -rf build",
     "validate": "npm run validate:types && npm run lint && npm run test",
@@ -29,37 +29,33 @@
   "license": "MIT",
   "repository": "git@github.com:nonsensebb/pulitzer.git",
   "dependencies": {
-    "connection-string": "^4.3.4",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "minio": "^7.0.18",
-    "opossum": "^6.2.0",
-    "pino-http": "^5.5.0",
-    "sharp": "^0.28.3",
+    "connection-string": "^4.3.6",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "fast-url-parser": "^1.1.3",
+    "minio": "^7.0.32",
+    "opossum": "^7.0.1",
+    "pino": "^8.8.0",
+    "pino-http": "^8.3.0",
+    "sharp": "^0.31.3",
     "ulid": "^2.3.0"
   },
   "devDependencies": {
-    "@nonsensebb/eslint-config-typescript": "^0.5.0",
-    "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.24",
-    "@types/minio": "^7.0.8",
-    "@types/node": "^16.3.3",
-    "@types/opossum": "^4.1.2",
-    "@types/pino": "^6.3.9",
-    "@types/pino-http": "^5.4.2",
-    "@types/sharp": "^0.28.4",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
-    "eslint": "^7.30.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-promise": "^5.1.0",
-    "jest": "^27.0.6",
-    "nodemon": "^2.0.12",
-    "pino": "^6.12.0",
-    "pino-pretty": "^5.1.1",
-    "ts-jest": "^27.0.3",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "@nonsensebb/eslint-config-typescript": "^0.7.0",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/sharp": "^0.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.31.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
+    "pino-pretty": "^9.1.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "jest": {
     "preset": "ts-jest",
