--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "connection-string": "^4.3.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-terminator": "^3.2.0",
     "fast-url-parser": "^1.1.3",
     "minio": "^7.0.32",
     "opossum": "^7.0.1",
