--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pulitzer",
-  "version": "0.8.0-alpha",
+  "version": "0.8.0",
   "description": "Image resizing proxy",
   "main": "src/index.ts",
   "engines": {
