--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pulitzer",
   "version": "0.8.0",
   "description": "Image resizing proxy",
-  "main": "src/index.ts",
+  "main": "dist/src/index.js",
   "engines": {
     "node": ">= 18.0.0"
   },
@@ -10,14 +10,15 @@
     "start": "node ./build/index.js",
     "debug": "NODE_ENV=development nodemon | pino-pretty",
     "build": "tsc",
-    "clean": "rm -rf build",
-    "validate": "npm run validate:types && npm run lint && npm run test",
-    "test": "jest",
-    "fix": "npm run fix:js",
-    "fix:js": "eslint ${ESLINT_OPTS} --fix --ext .js --ext .ts src",
-    "lint": "npm run lint:js",
-    "lint:js": "eslint ${ESLINT_OPTS} --ext .js --ext .ts src",
-    "validate:types": "npm run build -- --noEmit"
+    "clean": "rimraf coverage build src/**/*.generated.*",
+    "validate": "run-s lint test",
+    "test": "jest --passWithNoTests",
+    "test:ci": "jest --ci --passWithNoTests --coverage",
+    "lint": "run-s lint:types lint:js",
+    "lint:fix": "npm run lint:fix:js",
+    "lint:fix:js": "eslint --fix .",
+    "lint:js": "eslint .",
+    "lint:types": "tsc --noEmit"
   },
   "keywords": [
     "image",
@@ -30,48 +31,53 @@
   "repository": "git@github.com:nonsensebb/pulitzer.git",
   "dependencies": {
     "connection-string": "^4.3.6",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-terminator": "^3.2.0",
     "fast-url-parser": "^1.1.3",
-    "minio": "^7.0.32",
-    "opossum": "^7.0.1",
-    "pino": "^8.8.0",
-    "pino-http": "^8.3.0",
-    "sharp": "^0.31.3",
+    "minio": "^7.1.1",
+    "opossum": "^8.0.1",
+    "pino": "^8.14.1",
+    "pino-http": "^8.3.3",
+    "sharp": "^0.32.4",
     "ulid": "^2.3.0"
   },
   "devDependencies": {
-    "@nonsensebb/eslint-config-typescript": "^0.7.0",
-    "@types/jest": "^29.2.5",
+    "@swc/core": "^1.3.70",
+    "@swc/helpers": "^0.5.1",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/node": "^18.11.18",
-    "@types/sharp": "^0.31.0",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "eslint": "^8.31.0",
-    "eslint-plugin-import": "^2.26.0",
+    "@types/opossum": "^6.2.3",
+    "@types/sharp": "^0.31.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "eslint": "^8.41.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.3.1",
-    "nodemon": "^2.0.20",
-    "pino-pretty": "^9.1.1",
-    "ts-jest": "^29.0.3",
+    "jest": "^29.6.1",
+    "nodemon": "^3.0.1",
+    "npm-run-all": "^4.1.5",
+    "pino-pretty": "^10.1.0",
+    "rimraf": "^5.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node"
-  },
   "nodemonConfig": {
+    "exec": "node -r ts-node/register src",
+    "ext": ".js,.ts,.mjs,.json,.env",
+    "delay": 1800,
     "ignore": [
       ".git",
-      "node_modules"
+      "jest.config.js",
+      "tests/**",
+      "dist/**"
     ],
     "watch": [
-      "src",
-      ".env"
-    ],
-    "exec": "node -r ts-node/register src/index.ts",
-    "ext": "js,ts,env"
+      "**",
+      ".env",
+      ".env.*"
+    ]
   }
 }
