--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node ./build/index.js",
     "debug": "NODE_ENV=development nodemon | pino-pretty",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "clean": "rimraf coverage build src/**/*.generated.*",
     "validate": "run-s lint test",
     "test": "jest --passWithNoTests",
@@ -30,39 +30,37 @@
   "license": "MIT",
   "repository": "git@github.com:nonsensebb/pulitzer.git",
   "dependencies": {
-    "connection-string": "^4.3.6",
+    "connection-string": "^4.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-terminator": "^3.2.0",
-    "fast-url-parser": "^1.1.3",
-    "minio": "^7.1.1",
-    "opossum": "^8.0.1",
-    "pino": "^8.14.1",
-    "pino-http": "^8.3.3",
-    "sharp": "^0.32.4",
-    "ulid": "^2.3.0"
+    "minio": "^7.1.3",
+    "opossum": "^8.1.1",
+    "pino": "^8.15.3",
+    "pino-http": "^8.5.0",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
-    "@swc/core": "^1.3.70",
-    "@swc/helpers": "^0.5.1",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.3",
+    "@swc/core": "^1.3.91",
+    "@swc/helpers": "^0.5.2",
+    "@types/express": "^4.17.18",
+    "@types/jest": "^29.5.5",
     "@types/node": "^18.11.18",
-    "@types/opossum": "^6.2.3",
+    "@types/opossum": "^8.1.3",
     "@types/sharp": "^0.31.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "eslint": "^8.41.0",
-    "eslint-plugin-import": "^2.27.5",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint": "^8.50.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.6.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
-    "pino-pretty": "^10.1.0",
-    "rimraf": "^5.0.1",
+    "pino-pretty": "^10.2.0",
+    "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^5.2.2"
   },
   "nodemonConfig": {
     "exec": "node -r ts-node/register src",
