Change from jest to vitest

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,7 +3,7 @@
   "exclude": [
     "dist",
     "node_modules",
-    "jest.config.js",
+    "vitest.config.mts",
     "package.json",
     "tsconfig.json",
     "tsconfig.build.json",
