--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,14 +10,10 @@
   "exclude": [
     "dist",
     "node_modules",
-    "jest.config.js",
+    "vitest.config.mts",
     "package.json",
     "tsconfig.json",
     "tsconfig.build.json"
-  ],
-  "references": [
-    { "path": "../common/tsconfig.json" },
-    { "path": "../eslint/tsconfig.json" },
   ],
   "ts-node": {
     "swc": true
