--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "build": "tsc -p tsconfig.build.json",
     "clean": "rimraf coverage build src/**/*.generated.*",
     "validate": "run-s lint test",
-    "test": "jest --passWithNoTests",
-    "test:ci": "jest --ci --passWithNoTests --coverage",
+    "test": "npm run test:js",
+    "test:js": "vitest --run --passWithNoTests",
+    "test:js:update": "vitest --run -u --passWithNoTests",
+    "test:ci": "CI=true vitest --coverage --passWithNoTests",
     "lint": "run-s lint:types lint:js",
     "lint:fix": "npm run lint:fix:js",
     "lint:fix:js": "eslint --fix .",
@@ -44,31 +46,30 @@
     "@swc/core": "^1.3.91",
     "@swc/helpers": "^0.5.2",
     "@types/express": "^4.17.18",
-    "@types/jest": "^29.5.5",
     "@types/node": "^18.11.18",
     "@types/opossum": "^8.1.3",
     "@types/sharp": "^0.31.1",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "@vitest/coverage-istanbul": "^0.34.4",
     "eslint": "^8.50.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "pino-pretty": "^10.2.0",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.4"
   },
   "nodemonConfig": {
     "exec": "node -r ts-node/register src",
-    "ext": ".js,.ts,.mjs,.json,.env",
+    "ext": ".js,.ts,.cjs,.mjs,.cts,.mts,.json,.env",
     "delay": 1800,
     "ignore": [
       ".git",
-      "jest.config.js",
+      "vitest.config.mts",
       "tests/**",
       "dist/**"
     ],
