--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pulitzer",
-  "version": "0.9.0",
+  "version": "0.10.0-dev",
   "description": "Image resizing proxy",
   "main": "dist/src/index.js",
   "engines": {
